--- a/app/paginas/familia/familia-detalhes.html
+++ b/app/paginas/familia/familia-detalhes.html
@@ -1,10 +1,13 @@
 <div *ngIf="familia">
-    <div class="form-group">
-        <label>Descricao: </label>
-        <input type="text" class="form-control" [(ngModel)]="familia.Descricao" placeholder="Descricao da família" />
-    </div>
-    <div class="form-group">
-        <label>Codigo: </label>
-        <input type="text" class="form-control" [(ngModel)]="familia.Codigo" placeholder="Código da família" />
-    </div>
+    <form (ngSubmit)="onSubmit(familia)">
+        <div class="form-group">
+            <label>Descricao: </label>
+            <input type="text" class="form-control" [(ngModel)]="familia.Descricao" placeholder="Descricao da família" />
+        </div>
+        <div class="form-group">
+            <label>Codigo: </label>
+            <input type="text" class="form-control" [(ngModel)]="familia.Codigo" placeholder="Código da família" />
+        </div>
+        <button type="submit" class="btn btn-default">Salvar</button>
+    </form>
 </div>
