--- a/app/paginas/familia/familia-detalhes.html
+++ b/app/paginas/familia/familia-detalhes.html
@@ -1,5 +1,5 @@
 <div *ngIf="familia">
-    <form (ngSubmit)="onSubmit(familia)">
+    <form (ngSubmit)="salvar(familia)">
         <div class="form-group">
             <label>Descricao: </label>
             <input type="text" class="form-control" [(ngModel)]="familia.Descricao" placeholder="Descricao da família" />
@@ -8,6 +8,7 @@
             <label>Codigo: </label>
             <input type="text" class="form-control" [(ngModel)]="familia.Codigo" placeholder="Código da família" />
         </div>
-        <button type="submit" class="btn btn-default">Salvar</button>
+        <button type="submit" class="btn btn-success">Salvar</button>
+        <button type="button" (click)="voltar()" class="btn btn-default">Voltar</button>
     </form>
 </div>
